Remove bottom margin from nav to fix extra space above sidebar

--- a/app/assets/stylesheets/tech4justice.css
+++ b/app/assets/stylesheets/tech4justice.css
@@ -9,6 +9,7 @@ body {
 .navbar-default {
     background-color:$darkblue !important;
     border:none !important;
+    margin-bottom:0 !important;
 }
 
 #main-header .navbar-brand {
